--- a/RallyFrontend/rally/package.json
+++ b/RallyFrontend/rally/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@kalimahapps/vue-icons": "^1.4.0",
+    "@vuepic/vue-datepicker": "^5.1.2",
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "pinia": "^2.0.36",
+    "source-map-support": "^0.5.21",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
