--- a/RallyFrontend/rally/package.json
+++ b/RallyFrontend/rally/package.json
@@ -3,28 +3,37 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
-    "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
+    "dev": "vite",
+    "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@kalimahapps/vue-icons": "^1.4.0",
+    "@mdi/font": "5.9.55",
     "@vuepic/vue-datepicker": "^5.1.2",
     "axios": "^1.4.0",
     "http-proxy-middleware": "^2.0.6",
+    "material-icons": "^1.13.7",
     "pinia": "^2.0.36",
+    "roboto-fontface": "*",
+    "socket.io-client": "^4.6.2",
     "source-map-support": "^0.5.21",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-native-websocket": "^2.0.15",
+    "vue-router": "^4.2.0",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuetify": "^3.3.2",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.8",
+    "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.3.2",
@@ -34,6 +43,8 @@
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
-    "vue-tsc": "^1.6.4"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-tsc": "^1.6.4",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
