--- a/RallyFrontend/rally/package.json
+++ b/RallyFrontend/rally/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.4.0",
     "http-proxy-middleware": "^2.0.6",
     "material-icons": "^1.13.7",
-    "pinia": "^2.0.36",
+    "pinia": "^2.1.3",
     "roboto-fontface": "*",
     "socket.io-client": "^4.6.2",
     "source-map-support": "^0.5.21",
@@ -27,6 +27,7 @@
     "vue-router": "^4.2.0",
     "vuesax": "^4.0.1-alpha.25",
     "vuetify": "^3.3.2",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
