--- a/RallyFrontend/rally/package.json
+++ b/RallyFrontend/rally/package.json
@@ -22,6 +22,7 @@
     "roboto-fontface": "*",
     "socket.io-client": "^4.6.2",
     "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0",
     "vue": "^3.3.2",
     "vue-native-websocket": "^2.0.15",
     "vue-router": "^4.2.0",
@@ -34,6 +35,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.8",
+    "@types/uuid": "^9.0.2",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
